--- a/G-06-main.html
+++ b/G-06-main.html
@@ -35,6 +35,22 @@
     </div>
   </header>
 
+  <script type="module">
+    import { trailingCursor } from "https://unpkg.com/cursor-effects@latest/dist/esm.js";
+  
+    new trailingCursor();
+  window.addEventListener("load", (event) => {
+    new cursoreffects.trailingCursor();
+  });
+  const targetElement = document.querySelector("#ghost");
+new cursoreffects.ghostCursor({ element: targetElement });
+// Create
+let cursorEffect = new ghostCursor();
+
+// Destroy
+cursorEffect.destroy()
+</script>
+
   <div class="conteudo">
 
 <div class="slide-show" >
@@ -47,9 +63,9 @@
   
   <div>
       <img class="slide" id="image00" src="./!images/pinkman.jpeg">
-      <img class="slide" id="image01" src="./!images/mega.jpg">
-      <img class="slide" id="image02" src="./!images/jailson-1.png">
-      <img class="slide" id="image03" src="./!images/lucas.jpg">
+      <img class="slide" id="image01" src="./!images/R (1).gif">
+      <img class="slide" id="image02" src="./!images/R.gif">
+      <img class="slide" id="image03" src="./!images/eac2a7c8a3cae2aa8c1fbaddd2c56c53_w200.gif">
     </div>
 </div>
 
